---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let ptr: *const i32 = std::ptr::null();

AST:
(source_file
  (let_declaration
    (identifier ptr)
    (pointer_type
      (primitive_type)
    )
    (call_expression
      (scoped_identifier
        (scoped_identifier
          (identifier std)
          (identifier ptr)
        )
        (identifier null)
      )
      (arguments)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "ptr",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
